# Machine_Learning_A_Klasifikasi_Sawit_252_363_446

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
b_split-data/: splitdata.py
c_eda/: eda.py
d_preprocessing/: pre.py
expA_classic/feature_extraction/color/: color_extratrees.py  color_svm.py  color_xgboost.py
expA_classic/feature_extraction/gabor/: gabor_extratrees.py  gabor_svm.py  gabor_xgboost.py
expA_classic/feature_extraction/texture/: texture_extratrees.py  texture_svm.py  texture_xgboost.py
expA_classic/normal/: extratrees_normal.py  svm_normal.py  xgboost_normal.py
expB_pretrained/baseline/: cnn_scratch.py
expB_pretrained/pretrained_transfer_learning/efficientnetb0/: efficientnetb0_finetune.py  efficientnetb0_freeze.py  efficientnetb0_lora.py
expB_pretrained/pretrained_transfer_learning/resnet50/: resnet50_finetune.py  resnet50_freeze.py  resnet50_lora.py
expC_transformer/maxvit-t/: maxvit_t_lora.py
expC_transformer/maxvitt/: maxvit_t_finetune.py  maxvit_t_freeze.py
expC_transformer/vitb16/: vit_b16_finetune.py  vit_b16_freeze.py  vit_b16_lora.py
sawit_models/: class_names.json  xgb_meta.joblib
src/: app.py
