[project]
name = "Machine_Learning_A_Klasifikasi_Sawit_252_363_446"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "muhammadwildannabila", email = "abilwildannabila2003@gmail.com"},
]
dependencies = ["torch>=2.9.1", "torchvision>=0.24.1", "timm>=1.0.22", "streamlit>=1.52.2", "numpy>=2.2.6", "pandas>=2.3.3", "pillow>=12.0.0", "joblib>=1.5.3", "scikit-learn>=1.7.2", "xgboost>=3.1.2", "opencv-python-headless>=4.12.0.88", "tensorflow>=2.20.0", "dill>=0.4.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
